# python_tornado_object_storage

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  app.py  cli.py  configuration.ini.example  object-storage.container  pyproject.toml
.github/workflows/: ci-check.yaml  deploy-image.yaml
kubernetes/: deployment.yaml  ingress.yaml  pod.yaml  pv-claim.yaml  pv-volume.yaml  service.yaml
src/: app.py
tests/: test_methods.py  test_requests.py
