[project]
name = "python-tornado-object-storage"
version = "0.1.0"
description = "A service to provide object storage service access using an AWSv4 signature for authentication."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tornado>=6.5.5",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "coverage>=7.13.5",
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "jake>=3.0.14",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "tornado>=6.5.5",
]
